# rss-watcher

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  compose.yaml  config.example.yaml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: docker.yml
rss_watcher/: CLAUDE.md  __init__.py  config.py  filters.py  main.py  media.py  notifier.py  rss_parser.py  simplex.py  storage.py  telegram.py
tests/: __init__.py  conftest.py  test_config.py  test_filters.py  test_main.py  test_media.py  test_rss_parser.py  test_simplex.py  test_storage.py  test_telegram.py
tests/fixtures/: sample_atom.xml  sample_config.yaml  sample_rss.xml
