[project]
name = "rss-watcher"
version = "1.0.0"
description = "RSS feed watcher with Telegram notifications and advanced filtering"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Grégoire Compagnon", email = "obeone@obeone.org" }
]
keywords = ["rss", "telegram", "notifications", "feed", "watcher"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: News/Diary",
]

dependencies = [
    "feedparser>=6.0.0",
    "aiohttp>=3.9.0",
    "aiohttp-socks>=0.8.0",
    "python-telegram-bot[socks]>=21.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "coloredlogs>=15.0",
    "aiosqlite>=0.19.0",
    "websockets>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "aioresponses>=0.7",
    "ruff>=0.1.0",
]

[project.scripts]
rss-watcher = "rss_watcher.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rss_watcher"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "UP", "B", "C4", "SIM"]
ignore = ["D100", "D104", "D107"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
